...
    <string name="key_delete_all_transactions" translatable="false">delete_all_transactions</string>
    <string name="key_default_export_format" translatable="false">default_export_format</string>
    <string name="key_create_default_accounts" translatable="false">create_default_accounts</string>
    <string name="key_save_opening_balances" translatable="false">save_opening_balances</string>
    <string name="key_restore_backup" translatable="false">restore_backup</string>
    <string name="key_dropbox_sync" translatable="false">dropbox_sync</string>
    <string name="key_owncloud_sync" translatable="false">owncloud_sync</string>
    <string name="owncloud_pref" translatable="false">owncloud</string>
    <string name="owncloud_sync" translatable="false">owncloud_sync</string>
    <string name="key_owncloud_server" translatable="false">owncloud_server_address</string>
    <string name="key_owncloud_dir" translatable="false">owncloud_upload_dir</string>
    <string name="key_owncloud_username" translatable="false">owncloud_sync_username</string>
    <string name="key_owncloud_password" translatable="false">owncloud_sync_password</string>
    <string name="key_create_backup" translatable="false">create_backup</string>
    <string name="key_google_drive_app_folder_id" translatable="false">google_drive_app_folder</string>
    <string name="key_enable_crashlytics" translatable="false">enable_crashlytics</string>
    <string name="key_use_account_color" translatable="false">use_account_color</string>
    <string name="key_last_export_destination" translatable="false">last_export_destination</string>
    <string name="key_use_compact_list" translatable="false">use_compact_list</string>
    <string name="key_prefs_header_general" translatable="false">prefs_header_general</string>
    <string name="key_dropbox_access_token" translatable="false">dropbox_access_token</string>
    <string name="key_backup_location" translatable="false">backup_location</string>
    <string name="key_export_accounts_csv" translatable="false">export_accounts_csv_key</string>
    <string name="key_delete_transaction_backup" translatable="false">delete_transaction_backup</string>
...
