...
    <string name="label_transaction_description">Add note</string>
    <string name="title_selected">%1$d selected</string>
    <string name="label_account_balance">Balance:</string>
    <string name="label_export_destination">Export To:</string>
    <string name="title_export_dialog">Export Transactions</string>
    <string name="hint_export_choice">By default, only new transactions since last export will be exported. Check this option to export all transactions</string>
    <string name="toast_export_error">Error exporting %1$s file</string>
    <string name="btn_export">Export</string>
    <string name="option_delete_after_export">Delete transactions after export</string>
    <string name="hint_delete_after_export">All exported transactions will be deleted when exporting is completed</string>
    <string name="title_settings">Settings</string>
    <string-array name="export_destinations">
        <item>Save As…</item>
        <item>Dropbox</item>
        <item>ownCloud</item>
        <item>Send to…</item>
    </string-array>
...
    <string name="label_delete_account_transactions_description">This account contains transactions.\nWhat would you like to do with these transactions?</string>
    <string name="label_delete_account_subaccounts_description">This account contains sub-accounts.\nWhat would you like to do with these sub-accounts?</string>
    <string name="label_delete_transactions">Delete transactions</string>
    <string name="toast_disable_double_entry_to_save_transaction">Create and specify a transfer account OR disable double-entry in settings to save the transaction</string>
    <string name="label_tap_to_create_schedule">Tap to create schedule</string>
    <string name="title_restore_backup">Restore Backup…</string>
    <string name="header_backup_and_export_settings">Backup &amp; export</string>
    <string name="title_dropbox_sync_preference">Enable Dropbox</string>
    <string name="title_owncloud_sync_preference">Enable ownCloud</string>
    <string name="title_backup_preference_category">Backup</string>
    <string name="summary_dropbox_sync">Enable exporting to Dropbox</string>
    <string name="summary_owncloud_sync">Enable exporting to ownCloud</string>
    <string name="title_backup_prefs">Backup Preferences</string>
    <string name="title_create_backup_pref">Create Backup</string>
    <string name="summary_create_backup_pref">Create a backup of the active book</string>
    <string name="summary_restore_backup_pref">Restore most recent backup of active book</string>
    <string name="toast_backup_successful">Backup successful</string>
    <string name="toast_backup_failed">Backup failed</string>
    <string name="export_warning_xml">Exports all accounts and transactions</string>
    <string name="toast_install_file_manager">Install a file manager to select files</string>
    <string name="title_select_backup_to_restore">Select backup to restore</string>
    <string name="nav_menu_favorites">Favourites</string>
    <string name="nav_menu_open">Open…</string>
    <string name="nav_menu_reports">Reports</string>
    <string name="nav_menu_export">Export…</string>
    <!-- Menu item for the settings activity [CHAR LIMIT=64] -->
    <string name="menu_settings" msgid="377929915873428211">Settings</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="owncloud_server_invalid">OC server not found</string>
    <string name="owncloud_user_invalid">OC username/password invalid</string>
...
    <string name="label_export_format">Format</string>
    <string name="label_old_passcode">Enter your old passcode</string>
    <string name="label_new_passcode">Enter your new passcode</string>
    <string name="title_scheduled_exports">Exports</string>
    <string name="label_no_scheduled_exports_to_display">No scheduled exports to display</string>
    <string name="title_create_export_schedule">Create export schedule</string>
    <string name="toast_exported_to">Exported to: %1$s</string>
    <string name="toast_legend_too_long">The legend is too long</string>
    <string name="hint_account_description">Account description</string>
    <string name="label_no_recent_accounts">No recent accounts</string>
    <string name="label_no_favorite_accounts">No favourite accounts</string>
    <string name="nav_menu_scheduled_actions">Scheduled Actions</string>
    <string name="label_scheduled_action">"%1$s, last executed on %2$s"</string>
...
